--- a/examples/django_demo/demo/templates/index.html
+++ b/examples/django_demo/demo/templates/index.html
@@ -6,6 +6,8 @@
     <script src="{% static 'main.js' %}"></script>
 </head>
 <body>
-Hei
+<textarea rows="3" id="message"></textarea>
+<button id="send">Send</button>
+
 </body>
 </html>
